tests/ui/recursion/recursive-static-definition.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/recursive-static-definition.rs:1:23
   |
LL | pub static FOO: u32 = FOO;
   |                       ^^^ encountered static that tried to initialize itself with itself

error[E0080]: could not evaluate static initializer
  --> $DIR/recursive-static-definition.rs:9:23
   |
LL | pub static BAR: Foo = BAR;
   |                       ^^^ encountered static that tried to initialize itself with itself

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
